--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 <h2 class="section-title">קטגוריות תעשייה</h2>
                 <div class="categories">
                     <a href="n.html" class="category-button">טקסטיל ומוצרי תינוקות</a>
-                    <a href="#" class="category-button">תאורת לד גמיש וגופי תאורה</a>
+                    <a href="תאורה.html" class="category-button">תאורת לד גמיש וגופי תאורה</a>
                 </div>
             </div>
         </section>
